Début de GestionAffichage #5

--- a/.runtime/projectInfo.html
+++ b/.runtime/projectInfo.html
@@ -60,7 +60,7 @@
 			</tr>
 			<tr>
 				<td class="label">Last modification:</td>
-				<td>04-22-2019 19:36:25</td>
+				<td>04-23-2019 19:04:46</td>
 			</tr>
 		</table>
 	</section>
@@ -83,7 +83,7 @@
 				<div class="col-md">
 					<h3>Modules</h3>
 					<div class="contentlist">				
-					<div class='listitem'><img src="file:///C:/Users/Julien/.modelio/3.8/.eclipse/configuration.x86_64.os/org.eclipse.osgi/238/0/.cp/icons/mdafragment.png"> ModelerModule 9.0.06</div><div class='listitem'><img src="file:///C:/Users/Julien/.modelio/3.8/.eclipse/configuration.x86_64.os/org.eclipse.osgi/238/0/.cp/icons/mdafragment.png"> JavaDesigner 3.8.01</div>				
+					<div class='listitem'><img src="file:///C:/Users/Julien/.modelio/3.8/.eclipse/configuration.x86_64.os/org.eclipse.osgi/238/0/.cp/icons/mdafragment.png"> JavaDesigner 3.8.01</div><div class='listitem'><img src="file:///C:/Users/Julien/.modelio/3.8/.eclipse/configuration.x86_64.os/org.eclipse.osgi/238/0/.cp/icons/mdafragment.png"> ModelerModule 9.0.06</div><div class='listitem'><img src="file:///C:/Users/Julien/.modelio/3.8/.eclipse/configuration.x86_64.os/org.eclipse.osgi/238/0/.cp/icons/mdafragment.png"> WebModelPublisher 4.8.02</div>				
 					</div>
 				</div>
 			</div>
